# parker

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  parker.toml  post.py
src/: context.rs  database.rs  db.rs  doc.rs  main.rs  opt_config.rs  render.rs  routes.rs
templates/: base.html.tera  index.html.tera  page.html.tera
www/static/: header.css  page.css
www/templates/: base.html.tera  header.html.tera  page.html.tera
