[package]
name = "parker"
version = "0.1.0"
authors = ["Lucas Pickering <lucaspickering9@gmail.com>"]

[dependencies]
bson = "0.13"
mongodb = "0.3"
rocket = "0.3"
rocket_codegen = "0.3"
# rocket_contrib = { version="*", default-features = false, features = ["tera_templates"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "tera_templates"]
