[package]
name = "parker"
version = "0.1.0"
authors = ["Lucas Pickering <lucaspickering9@gmail.com>"]

[dependencies]
bson = "0.12"
config = "0.9"
mongodb = "0.3"
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "tera_templates"]
