[package]
name = "parker"
version = "0.1.0"
authors = ["Lucas Pickering <lucaspickering9@gmail.com>"]

[dependencies]
bson = "0.12"
config = "0.9"
mongodb = "0.3"
pulldown-cmark = { version = "0.1", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"
# tera = "0.11"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
# branch = "v0.4-preview"

[dependencies.rocket_codegen]
git = "https://github.com/SergioBenitez/Rocket"
# branch = "v0.4-preview"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
# branch = "v0.4-preview"
default-features = false
features = ["json", "tera_templates"]
